--- a/views/success.ejs
+++ b/views/success.ejs
@@ -16,7 +16,11 @@
           </nav>
     </header>
     <div class="container-md py-4">
-        <h2> Success page </h2>
+        <!-- <% errors.forEach(function(error){ %>
+            <div class="alert alert-danger" role="alert">
+                <%= error.message %>
+            </div>
+        <% }) %> -->
     </div>
 
 
